tests/parsing/smtlib/v2.6/errors/143_define-funs-rec_list_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/143_define-funs-rec_list_unclosed_1.smt2", line 2, character 32-33:
2 | (define-funs-rec ((foo () bool) _))
                                    ^
Error while parsing a list of function declarations,
      read the reserved word '_',
      but expected another function declaration, or a closing parenthesis.
